experiments/29/3c6d382128a0e52a144cec901932d71e072760/error
STDOUT:
AT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Target/X86 -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86 -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG -fvisibility=hidden    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86ISelLowering.cpp.o -MF lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86ISelLowering.cpp.o.d -o lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86ISelLowering.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp:3363:19: error: declaration of ‘const llvm::Function& VarArgsLoweringHelper::Function’ [-fpermissive]
   const Function &Function;
                   ^~~~~~~~
In file included from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/Analysis/ProfileSummaryInfo.h:18:0,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/CodeGen/TargetLowering.h:31,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.h:17,
                 from /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Target/X86/X86ISelLowering.cpp:14:
/root/llvm-compile-time-tracker/llvm-project/llvm/include/llvm/IR/Function.h:61:7: error: changes meaning of ‘Function’ from ‘class llvm::Function’ [-fpermissive]
 class Function : public GlobalObject, public ilist_node<Function> {
       ^~~~~~~~
[1872/2534] Building CXX object tools/clang/lib/Parse/CMakeFiles/obj.clangParse.dir/ParseObjc.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
CMake Warning at CMakeLists.txt:6 (message):
  Your CMake version is 3.10.2.  Starting with LLVM 12.0.0, the minimum
  version of CMake required to build LLVM will become 3.13.4, and using an
  older CMake will become an error.  Please upgrade your CMake to at least
  3.13.4 now to avoid issues in the future!


-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
118.29user 17.62system 1:08.49elapsed 198%CPU (0avgtext+0avgdata 974920maxresident)k
352inputs+1216192outputs (46major+2552523minor)pagefaults 0swaps
